media query added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </nav>
     </header>
     <!-- Header ended -->
+    <!-- Banner Started -->
     <div class="banner"></div>
+    <!-- Banner ended -->
     <div class="container row webitems">
         <div class="col-md-9 left">
             <h3>Contact Us</h3>
@@ -48,7 +50,7 @@
                     <input type="text" class="form-control mb-2 mr-sm-2 inputitem" id="inlineFormInputName2" placeholder="Name*">
                 </div>
                 <div class="col">
-                    <input type="text" class="form-control mb-2 mr-sm-2 inputitem " id="inlineFormInputName2" placeholder="Email*">
+                    <input type="email" class="form-control mb-2 mr-sm-2 inputitem " id="inlineFormInputName2" placeholder="Email*" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
                 </div>
             </div>
 
