--- a/index.html
+++ b/index.html
@@ -92,13 +92,18 @@
         </div>
 
     </div>
+
+    <!-- footer start -->
     <footer>
         <div class="footer">
             <h6>&#169 2023 Netsolutions. All Rights Reserved.</h6>
         </div>
     </footer>
+    <!-- footer end-->
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
